--- a/WebRole1/RESTfulService.csproj
+++ b/WebRole1/RESTfulService.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Controllers\MovieController.cs" />
     <Compile Include="Controllers\RatingController.cs" />
     <Compile Include="Controllers\RoomController.cs" />
+    <Compile Include="Controllers\ScreeningController.cs" />
     <Compile Include="Controllers\TheaterController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -235,6 +236,7 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\Rating.cs" />
     <Compile Include="Models\Room.cs" />
+    <Compile Include="Models\Screening.cs" />
     <Compile Include="Models\Theater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebRole.cs" />
@@ -302,6 +304,7 @@
     <Folder Include="Views\Movie\" />
     <Folder Include="Views\Rating\" />
     <Folder Include="Views\Room\" />
+    <Folder Include="Views\Screening\" />
     <Folder Include="Views\Theater\" />
   </ItemGroup>
   <ItemGroup>
