--- a/WebRole1/RESTfulService.csproj
+++ b/WebRole1/RESTfulService.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\ActorController.cs" />
+    <Compile Include="Controllers\BillController.cs" />
     <Compile Include="Controllers\DirectorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MovieController.cs" />
@@ -226,11 +227,13 @@
     <Compile Include="Controllers\RoomController.cs" />
     <Compile Include="Controllers\ScreeningController.cs" />
     <Compile Include="Controllers\TheaterController.cs" />
+    <Compile Include="Controllers\TicketController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Actor.cs" />
+    <Compile Include="Models\Bill.cs" />
     <Compile Include="Models\Connection.cs" />
     <Compile Include="Models\Director.cs" />
     <Compile Include="Models\Movie.cs" />
@@ -238,6 +241,7 @@
     <Compile Include="Models\Room.cs" />
     <Compile Include="Models\Screening.cs" />
     <Compile Include="Models\Theater.cs" />
+    <Compile Include="Models\Ticket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebRole.cs" />
   </ItemGroup>
@@ -298,6 +302,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Actor\" />
+    <Folder Include="Views\Bill\" />
     <Folder Include="Views\Clasificacion\" />
     <Folder Include="Views\Connection\" />
     <Folder Include="Views\Director\" />
@@ -306,6 +311,7 @@
     <Folder Include="Views\Room\" />
     <Folder Include="Views\Screening\" />
     <Folder Include="Views\Theater\" />
+    <Folder Include="Views\Ticket\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
