Implementación de la consulta para obtener todas las proyecciones de un cine (view SCREENINGS_THEATER)

--- a/WebRole1/RESTfulService.csproj
+++ b/WebRole1/RESTfulService.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Models\Rating.cs" />
     <Compile Include="Models\Room.cs" />
     <Compile Include="Models\Screening.cs" />
+    <Compile Include="Models\Screenings_theater.cs" />
     <Compile Include="Models\Seat.cs" />
     <Compile Include="Models\Theater.cs" />
     <Compile Include="Models\Ticket.cs" />
