--- a/WebRole1/RESTfulService.csproj
+++ b/WebRole1/RESTfulService.csproj
@@ -250,6 +250,7 @@
     <Compile Include="Models\Seats_screening.cs" />
     <Compile Include="Models\Theater.cs" />
     <Compile Include="Models\Ticket.cs" />
+    <Compile Include="Models\Tickets_bill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebRole.cs" />
   </ItemGroup>
