--- a/WebRole1/RESTfulService.csproj
+++ b/WebRole1/RESTfulService.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="AzureStorage.cs" />
     <Compile Include="Controllers\ActorController.cs" />
     <Compile Include="Controllers\BillController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
@@ -322,6 +323,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Views\Actor\" />
     <Folder Include="Views\Bill\" />
+    <Folder Include="Views\Blobs\" />
     <Folder Include="Views\Clasificacion\" />
     <Folder Include="Views\Client\" />
     <Folder Include="Views\Connection\" />
